Fix bubbles z-index

--- a/RightpointLabs.Pourcast.Web/Content/pourcast.less
+++ b/RightpointLabs.Pourcast.Web/Content/pourcast.less
@@ -35,7 +35,7 @@ footer {
     background: #fff;
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 
     .foam-bubbles {
         height: 6vmin;
@@ -105,6 +105,7 @@ html, body,
 .taps {
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .tap {
